# alps2qutipplus

./: README.rst  pyproject.toml  setup.py
.github/workflows/: isort-and-black-checks.yml  old-ubuntu.py  old-ubuntu.ylm-no  old-ubuntu.yml  ubuntu.yml
alpsqutip/: __init__.py  alpsmodels.py  geometry.py  model.py  nbody.py  operator_functions.py  operators.py  proj_evol.py  quadratic.py  restricted_maxent_toolkit.py  scalarprod.py  settings.py  states.py  utils.py
alpsqutip/operators/: __init__.py  arithmetic.py  basic.py  functions.py  quadratic.py  qutip.py  simplify.py
alpsqutip/operators/states/: __init__.py  arithmetic.py  basic.py  gibbs.py  meanfield.py  qutip.py  states.py  utils.py
alpsqutip/operators/states/meanfield/: __init__.py  meanfield.py  projections.py  self_consistent_projections.py  variational.py
alpsqutip/qutip_tools/: tools.py
docs/: conf.py  what-is-alps2qutippp.rst
examples/: Examples.ipynb  testing-mf-projections-in-adapt-maxent.ipynb
test/: helper.py  test_generic.py  test_graphs.py  test_meanfield.py  test_operator_functions.py  test_operator_properties.py  test_operators.py  test_quadratic.py  test_qutip.py  test_remaxent.py  test_simplify.py  test_states.py
test/models/: test_generic.py  test_graphs.py
test/states/: test_gibbs.py  test_meanfield.py  test_projections.py  test_states.py  test_utils.py
